Java GC tuning and monitoring done